--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
   <head>
-    <title>Adriaan.io</title>
+    <title>Adriaan van Rossum</title>
     <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 | escape_once }}{% else %}{{ site.description }}{% endif %}">
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
