--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -33,7 +33,7 @@
 
           <!-- Logo -->
           <a href="/" class="logo">
-            <span class="symbol"><img src="/images/logo.svg" alt="" /></span><span class="title">Adriaan</span>
+            <span class="symbol"><img src="/images/logo.svg" alt="" /></span><span class="title">Adriaan van Rossum</span>
           </a>
 
           <!-- Nav -->
@@ -50,7 +50,7 @@
       <nav id="menu">
         <h2>Menu</h2>
         <ul>
-          <li><a href="/">Home</a></li>
+          <li><a href="/">Adriaan's projects</a></li>
           <li><a href="https://github.com/harianus/adriaan.io/edit/gh-pages/{{ page.path }}">Improve my grammar on GitHub</a></li>
         </ul>
       </nav>
