--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -33,7 +33,7 @@
 
           <!-- Logo -->
           <a href="/" class="logo">
-            <span class="symbol"><img src="/images/logo.svg" alt="" /></span><span class="title">Adriaan van Rossum</span>
+            <span class="symbol"><img src="/images/adriaan-van-rossum-silhouette.png" alt="" /></span><span class="title">Adriaan van Rossum</span>
           </a>
 
           <!-- Nav -->
@@ -82,7 +82,7 @@
               </ul>
             </form>
           </section>
-          <section>
+          <section class="profiles">
             <h2>Profiles &amp; contact</h2>
             <ul class="icons">
               <li><a href="https://twitter.com/harianus" class="icon style2 fa-twitter"><span class="label">Twitter</span></a></li>
