--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -89,7 +89,7 @@
               <li><a href="https://www.facebook.com/adriaanvrossum" class="icon style2 fa-facebook"><span class="label">Facebook</span></a></li>
               <li><a href="https://github.com/harianus/" class="icon style2 fa-github"><span class="label">GitHub</span></a></li>
               <li><a href="tel:+43691732474" class="icon style2 fa-phone"><span class="label">Phone</span></a></li>
-              <li><a href="mailto:website@adriaan.io?subject=I%20want%20to%20say%20hello!&amp;body=Hi%20Adriaan%2C%0A%0AI%20got%20this%20email%20address%20from%20you%20website%20https%3A%2F%2Fadriaan.io%2F{{ page.path }}.%0A%0AI%20want%20to%20contact%20you%20because%20..." class="icon style2 fa-envelope-o"><span class="label">Email</span></a></li>
+              <li><a href="mailto:website@adriaan.io?subject=I%20want%20to%20say%20hello!&amp;body=Hi%20Adriaan%2C%0A%0AI%20got%20this%20email%20address%20from%20your%20website%20https%3A%2F%2Fadriaan.io{{ page.url }}.%0A%0AI%20want%20to%20contact%20you%20because%20..." class="icon style2 fa-envelope-o"><span class="label">Email</span></a></li>
             </ul>
           </section>
           <ul class="copyright">
