--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -67,15 +67,16 @@
         <div class="inner">
           <section>
             <h2>Send me a message</h2>
-            <form method="post" action="#">
+            <form class="contact" method="post">
+              <p class="response" style="display: none;">Thanks for your message!</p>
               <div class="field half first">
-                <input type="text" name="name" id="name" placeholder="Name" />
+                <input type="text" name="name" id="name" placeholder="Name" required />
               </div>
               <div class="field half">
-                <input type="email" name="email" id="email" placeholder="Email" />
+                <input type="email" name="email" id="email" placeholder="Email" required />
               </div>
               <div class="field">
-                <textarea name="message" id="message" placeholder="Message"></textarea>
+                <textarea name="message" id="message" placeholder="Message" required></textarea>
               </div>
               <ul class="actions">
                 <li><input type="submit" value="Push it through the wire" class="special" /></li>
@@ -105,6 +106,7 @@
     <script src="/assets/js/util.js"></script>
     <!--[if lte IE 8]><script src="/assets/js/ie/respond.min.js"></script><![endif]-->
     <script src="/assets/js/main.js"></script>
+    <script src="/assets/js/adriaan.js"></script>
 
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
