--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -128,6 +128,9 @@
     <script src="/assets/js/main.js"></script>
     <script src="/assets/js/adriaan.js"></script>
 
+    <script async src="https://cdn.simpleanalytics.io/hello.js"></script> 
+    <noscript><img src="https://api.simpleanalytics.io/hello.gif" alt=""></noscript>
+    
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
