--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -131,14 +131,6 @@
     <script async src="https://cdn.simpleanalytics.io/hello.js"></script> 
     <noscript><img src="https://api.simpleanalytics.io/hello.gif" alt=""></noscript>
     
-    <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-      ga('create', 'UA-243569-41', 'auto');
-      ga('send', 'pageview');
-    </script>
+    <!-- No Google Analytics here -->
   </body>
 </html>
