Fix social media links

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -70,7 +70,7 @@
         <h2>Menu</h2>
         <ul>
           <li><a href="/">Adriaan's projects</a></li>
-          <li><a href="https://github.com/harianus/adriaan.io/edit/gh-pages/{{ page.path }}">Improve my grammar on GitHub</a></li>
+          <li><a href="https://github.com/adriaanvanrossum/adriaan.io/edit/gh-pages/{{ page.path }}">Improve my grammar on GitHub</a></li>
         </ul>
       </nav>
 
@@ -105,11 +105,9 @@
           <section class="profiles">
             <h2>Profiles &amp; contact</h2>
             <ul class="icons">
-              <li><a href="https://twitter.com/harianus" class="icon style2 fa-twitter"><span class="label">Twitter</span></a></li>
-              <li><a href="https://www.facebook.com/adriaanvrossum" class="icon style2 fa-facebook"><span class="label">Facebook</span></a></li>
-              <li><a href="https://github.com/harianus/" class="icon style2 fa-github"><span class="label">GitHub</span></a></li>
+              <li><a href="https://twitter.com/adriaanvrossum" class="icon style2 fa-twitter"><span class="label">Twitter</span></a></li>
+              <li><a href="https://github.com/adriaanvanrossum" class="icon style2 fa-github"><span class="label">GitHub</span></a></li>
               <li><a href="https://linkedin.com/in/adriaanvanrossum" class="icon style2 fa-linkedin"><span class="label">LinkedIn</span></a></li>
-              <li><a href="tel:+43691732474" class="icon style2 fa-phone"><span class="label">Phone</span></a></li>
               <li><a href="mailto:website@adriaan.io?subject=I%20want%20to%20say%20hello!&amp;body=Hi%20Adriaan%2C%0A%0AI%20got%20this%20email%20address%20from%20your%20website%20https%3A%2F%2Fadriaan.io{{ page.url }}.%0A%0AI%20want%20to%20contact%20you%20because%20..." class="icon style2 fa-envelope-o"><span class="label">Email</span></a></li>
             </ul>
           </section>
