Add Simple Analytics script

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -41,6 +41,7 @@
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
+    <script async defer src="https://api.adriaan.io/latest.js"></script> 
   </head>
   <body>
     <!-- Wrapper -->
@@ -126,7 +127,7 @@
     <script src="/assets/js/main.js"></script>
     <script src="/assets/js/adriaan.js"></script>
 
-    <noscript><img src="https://api.simpleanalytics.io/hello.gif" alt=""></noscript>
+    <noscript><img src="https://api.adriaan.io/noscript.gif" alt="" referrerpolicy="no-referrer-when-downgrade" /></noscript>
     
     <!-- No Google Analytics here -->
   </body>
